Add/re-implement QDM classes used by indexer; address java 10 deprecations